--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,16 @@
-# Dados de conexão com o banco H2
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.url=jdbc:h2:mem:relatoriotest
-spring.datasource.username=sa
-spring.datasource.password=
+# Dados de conexão com o banco PostgreSQL
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.url=jdbc:postgresql://localhost:5432/relatoriotest
+spring.datasource.username=postgres
+spring.datasource.password=helo2912
+spring.jpa.hibernate.ddl-auto=create
 
-# H2 Client
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
 
-# JPA, SQL
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
+# JPA / Hibernate
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.defer-datasource-initialization=true
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+
+# Configurações específicas do H2 (desnecessárias no PostgreSQL) foram removidas
