Adiciona configuração CORS, refatora endpoints e implementa front-end para gerenciamento de relatórios

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,9 @@
-# Dados de conexão com o banco PostgreSQL
+# Dados de conexao com o banco PostgreSQL
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost:5432/relatoriotest
 spring.datasource.username=postgres
 spring.datasource.password=helo2912
 spring.jpa.hibernate.ddl-auto=create
-
-
 
 # JPA / Hibernate
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
@@ -13,4 +11,4 @@ spring.jpa.defer-datasource-initialization=true
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
-# Configurações específicas do H2 (desnecessárias no PostgreSQL) foram removidas
+# Configuracoes especificas do H2 (desnecessarias no PostgreSQL) foram removidas
