--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,16 @@
-# Dados de conexao com o banco PostgreSQL
+# Dados de conexão com o banco PostgreSQL
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost:5432/relatoriotest
 spring.datasource.username=postgres
 spring.datasource.password=helo2912
-spring.jpa.hibernate.ddl-auto=create
 
 # JPA / Hibernate
+spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.defer-datasource-initialization=true
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
-# Configuracoes especificas do H2 (desnecessarias no PostgreSQL) foram removidas
+# Flyway
+spring.flyway.enabled=true
+spring.flyway.locations=classpath:db/migration
+spring.flyway.baseline-on-migrate=true
